--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "short_name": "Mieszkaniownik",
   "icons": [
     {
-      "src": "/icons/logo192.png",
+      "src": "/icons/logo192.jpg",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/logo512.png",
+      "src": "/icons/logo512.jpg",
       "sizes": "512x512",
       "type": "image/png"
     }
