--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "wakacyjne-wyzwanie-mieszkaniownik-frontend",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "prepare": "husky || true",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
+  "lint-staged": {
+    "*": "prettier -w --ignore-unknown"
+  },
+  "prettier": "@solvro/config/prettier",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "lucide-react": "^0.544.0",
@@ -20,7 +28,9 @@
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
     "@eslint/js": "^9.35.0",
+    "@solvro/config": "^2.0.7",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
@@ -28,6 +38,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.4",
+    "prettier": "^3.6.2",
     "vite": "^7.1.6"
   }
 }
