chore: fix .prettierignore

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,5 @@
-# Helm templates contain Go template syntax that Prettier cannot parse
-devops/templates/
+# Helm templates
+helm-chart-frontend/
 
 # Build output
 dist/
