--- a/helm-chart-frontend/values-prod.yaml
+++ b/helm-chart-frontend/values-prod.yaml
@@ -1,7 +1,7 @@
 global:
-  imageRegistry: ""
+  imageRegistry: "eu.gcr.io/"
   imagePullSecrets:
-    - name: prod-registry-secret
+    - name: registry-secret
 
 frontend:
   replicaCount: 5
@@ -12,7 +12,8 @@ frontend:
 
   env:
     NODE_ENV: production
-    VITE_API_URL: "https://api.mieszkaniownik.com"
+    VITE_API_URL: "https://api.mieszkaniownik.wsparcie.dev"
+    VITE_GOOGLE_MAPS_API_KEY: "${VITE_GOOGLE_MAPS_API_KEY}"
     VITE_ENABLE_DEBUG: "false"
     VITE_LOG_LEVEL: "error"
 
@@ -26,7 +27,7 @@ frontend:
 
 config:
   api:
-    baseUrl: "https://api.mieszkaniownik.com"
+    baseUrl: "https://api.mieszkaniownik.wsparcie.dev"
     timeout: 30000
   features:
     enableAnalytics: true
@@ -39,13 +40,13 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/rate-limit: "100"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://api.mieszkaniownik.wsparcie.dev"
   hosts:
-    - host: mieszkaniownik.com
-      paths:
-        - path: /
-          pathType: Prefix
-          service: frontend
-    - host: www.mieszkaniownik.com
+    - host: mieszkaniownik.wsparcie.dev
       paths:
         - path: /
           pathType: Prefix
@@ -53,8 +54,7 @@ ingress:
   tls:
     - secretName: mieszkaniownik-prod-tls
       hosts:
-        - mieszkaniownik.com
-        - www.mieszkaniownik.com
+        - mieszkaniownik.wsparcie.dev
 
 autoscaling:
   enabled: true
