--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 5173;
+    listen 80;
     server_name localhost;
     root /usr/share/nginx/html;
     index index.html;
@@ -11,6 +11,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    # API proxy
     location /api {
         proxy_pass http://backend:5001;
         proxy_http_version 1.1;
@@ -21,10 +22,18 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        proxy_intercept_errors off;
     }
 
+    # Static assets caching
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
+
+    # Security headers
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
 }
