--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,15 +9,23 @@ options:
   logging: CLOUD_LOGGING_ONLY
   machineType: 'E2_HIGHCPU_8'
 
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/google-maps-api-key-prod/versions/latest
+      env: 'VITE_GOOGLE_MAPS_API_KEY'
+    - versionName: projects/$PROJECT_ID/secrets/vite-api-url-prod/versions/latest
+      env: 'VITE_API_URL'
+
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     id: 'build-image'
+    secretEnv: ['VITE_GOOGLE_MAPS_API_KEY', 'VITE_API_URL']
     args:
       - 'build'
       - '--tag=eu.gcr.io/$PROJECT_ID/${_IMAGE_NAME}:$SHORT_SHA'
       - '--tag=eu.gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
-      - '--build-arg=VITE_API_URL=${_VITE_API_URL}'
-      - '--build-arg=VITE_GOOGLE_MAPS_API_KEY=${_VITE_GOOGLE_MAPS_API_KEY}'
+      - '--build-arg=VITE_API_URL=$$VITE_API_URL'
+      - '--build-arg=VITE_GOOGLE_MAPS_API_KEY=$$VITE_GOOGLE_MAPS_API_KEY'
       - '--build-arg=NODE_ENV=production'
       - '--cache-from=eu.gcr.io/$PROJECT_ID/${_IMAGE_NAME}:latest'
       - '.'
