chore: add Google Maps to CSP

--- a/nginx.conf
+++ b/nginx.conf
@@ -48,9 +48,9 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Security headers with CSP that allows Google Fonts
+    # Security headers with CSP that allows Google Fonts and Google Maps
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob:; connect-src 'self' https://*.wsparcie.dev https://umami.suzuya.dev; frame-src 'self'; base-uri 'self'; form-action 'self';" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://maps.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob:; connect-src 'self' https://*.wsparcie.dev https://maps.googleapis.com https://umami.suzuya.dev; frame-src 'self'; base-uri 'self'; form-action 'self';" always;
 }
