--- a/helm-chart-frontend/values-prod.yaml
+++ b/helm-chart-frontend/values-prod.yaml
@@ -10,6 +10,9 @@ frontend:
     tag: "v1.0.0"
     pullPolicy: IfNotPresent
 
+  service:
+    type: NodePort
+
   env:
     NODE_ENV: production
     VITE_API_URL: "https://api.mieszkaniownik.wsparcie.dev"
@@ -36,32 +39,28 @@ config:
     enableDebugMode: false
 
 ingress:
-  enabled: true
+  enabled: false
+  className: "gce"
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/rate-limit: "100"
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://api.mieszkaniownik.wsparcie.dev"
+    kubernetes.io/ingress.class: "gce"
+    kubernetes.io/ingress.global-static-ip-name: "mieszkaniownik-ingress-ip"
+    networking.gke.io/managed-certificates: "mieszkaniownik-frontend-cert"
+    kubernetes.io/ingress.allow-http: "true"
+    cloud.google.com/neg: '{"ingress": true}'
   hosts:
     - host: mieszkaniownik.wsparcie.dev
       paths:
         - path: /
           pathType: Prefix
           service: frontend
-  tls:
-    - secretName: mieszkaniownik-prod-tls
-      hosts:
-        - mieszkaniownik.wsparcie.dev
+  tls: []
 
 autoscaling:
   enabled: true
-  minReplicas: 3
-  maxReplicas: 20
-  targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
+  minReplicas: 2
+  maxReplicas: 2
+  targetCPUUtilizationPercentage: 100
+  targetMemoryUtilizationPercentage: 100
 
 podSecurityContext:
   runAsNonRoot: true
