--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,46 +10,67 @@ substitutions:
 options:
   logging: CLOUD_LOGGING_ONLY
   machineType: "E2_HIGHCPU_8"
-
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/google-maps-api-key-prod/versions/latest
-      env: "VITE_GOOGLE_MAPS_API_KEY"
-    - versionName: projects/$PROJECT_ID/secrets/vite-api-url-prod/versions/latest
-      env: "VITE_API_BASE_URL"
+  dynamicSubstitutions: true
 
 steps:
+  - name: "gcr.io/cloud-builders/gcloud"
+    id: "get-secrets"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        echo "Fetching frontend secrets..."
+        VITE_GOOGLE_MAPS_API_KEY=$$(gcloud secrets versions access latest --secret=google-maps-api-key-prod --project=$PROJECT_ID)
+        VITE_API_BASE_URL=$$(gcloud secrets versions access latest --secret=vite-api-url-prod --project=$PROJECT_ID)
+        
+        # Write secrets to environment file
+        cat > /workspace/frontend-secrets.env << EOF
+        VITE_GOOGLE_MAPS_API_KEY=$$VITE_GOOGLE_MAPS_API_KEY
+        VITE_API_BASE_URL=$$VITE_API_BASE_URL
+        EOF
+        
+        echo "Frontend secrets retrieved successfully"
+
   - name: "gcr.io/cloud-builders/docker"
     id: "build-image"
-    secretEnv: ["VITE_GOOGLE_MAPS_API_KEY", "VITE_API_BASE_URL"]
+    entrypoint: "bash"
     args:
-      - "build"
-      - "--tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:$SHORT_SHA"
-      - "--tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest"
-      - "--tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:${BRANCH_NAME}-latest"
-      - "--build-arg=VITE_API_BASE_URL=$$VITE_API_BASE_URL"
-      - "--build-arg=VITE_GOOGLE_MAPS_API_KEY=$$VITE_GOOGLE_MAPS_API_KEY"
-      - "--build-arg=NODE_ENV=production"
-      - "--cache-from=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest"
-      - "."
+      - "-c"
+      - |
+        # Source the secrets file
+        source /workspace/frontend-secrets.env
+        
+        docker build \
+          --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:$SHORT_SHA \
+          --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest \
+          --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:${BRANCH_NAME}-latest \
+          --build-arg=VITE_API_BASE_URL=$$VITE_API_BASE_URL \
+          --build-arg=VITE_GOOGLE_MAPS_API_KEY=$$VITE_GOOGLE_MAPS_API_KEY \
+          --build-arg=NODE_ENV=production \
+          --cache-from=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest \
+          .
+    waitFor: ["get-secrets"]
 
   - name: "gcr.io/cloud-builders/docker"
     id: "push-image"
     args:
       - "push"
       - "${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:$SHORT_SHA"
+    waitFor: ["build-image"]
 
   - name: "gcr.io/cloud-builders/docker"
     id: "push-latest"
     args:
       - "push"
       - "${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest"
+    waitFor: ["build-image"]
 
   - name: "gcr.io/cloud-builders/docker"
     id: "push-branch-latest"
     args:
       - "push"
       - "${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:${BRANCH_NAME}-latest"
+    waitFor: ["build-image"]
 
   - name: "gcr.io/cloud-builders/gcloud"
     id: "get-credentials"
@@ -59,6 +80,8 @@ steps:
       - "get-credentials"
       - "${_CLUSTER_NAME}"
       - "--zone=${_CLUSTER_ZONE}"
+      - "--project=$PROJECT_ID"
+    waitFor: ["push-branch-latest"]
 
   - name: "gcr.io/$PROJECT_ID/helm"
     id: "helm-deploy"
@@ -76,6 +99,7 @@ steps:
       - "--set=global.imageRegistry="
       - "--wait"
       - "--timeout=10m"
+    waitFor: ["get-credentials"]
 
   - name: "gcr.io/cloud-builders/kubectl"
     id: "verify-deployment"
@@ -86,6 +110,7 @@ steps:
       - "-n"
       - "${_NAMESPACE}"
       - "--timeout=5m"
+    waitFor: ["helm-deploy"]
 
 images:
   - "${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:$SHORT_SHA"
