chore: add cluster env vars

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -110,6 +110,9 @@ steps:
 
   - name: "gcr.io/cloud-builders/kubectl"
     id: "verify-deployment"
+    env:
+      - "CLOUDSDK_COMPUTE_ZONE=${_CLUSTER_ZONE}"
+      - "CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}"
     args:
       - "rollout"
       - "status"
