--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,34 +12,23 @@ options:
   machineType: "E2_HIGHCPU_8"
   dynamicSubstitutions: true
 
-steps:
-  - name: "gcr.io/cloud-builders/gcloud"
-    id: "get-secrets"
-    entrypoint: "bash"
-    args:
-      - "-c"
-      - |
-        echo "Fetching frontend secrets..."
-        VITE_GOOGLE_MAPS_API_KEY=$$(gcloud secrets versions access latest --secret=google-maps-api-key-prod --project=$PROJECT_ID)
-        VITE_API_BASE_URL=$$(gcloud secrets versions access latest --secret=vite-api-url-prod --project=$PROJECT_ID)
-        
-        # Write secrets to environment file
-        cat > /workspace/frontend-secrets.env << EOF
-        VITE_GOOGLE_MAPS_API_KEY=$$VITE_GOOGLE_MAPS_API_KEY
-        VITE_API_BASE_URL=$$VITE_API_BASE_URL
-        EOF
-        
-        echo "Frontend secrets retrieved successfully"
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/google-maps-api-key-prod/versions/latest
+      env: "VITE_GOOGLE_MAPS_API_KEY"
+    - versionName: projects/$PROJECT_ID/secrets/vite-api-url-prod/versions/latest
+      env: "VITE_API_BASE_URL"
 
+steps:
   - name: "gcr.io/cloud-builders/docker"
     id: "build-image"
+    secretEnv:
+      - "VITE_API_BASE_URL"
+      - "VITE_GOOGLE_MAPS_API_KEY"
     entrypoint: "bash"
     args:
       - "-c"
       - |
-        # Source the secrets file
-        source /workspace/frontend-secrets.env
-        
         docker build \
           --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:$SHORT_SHA \
           --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest \
@@ -49,7 +38,6 @@ steps:
           --build-arg=NODE_ENV=production \
           --cache-from=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest \
           .
-    waitFor: ["get-secrets"]
 
   - name: "gcr.io/cloud-builders/docker"
     id: "push-image"
