--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,23 +12,31 @@ options:
   machineType: "E2_HIGHCPU_8"
   dynamicSubstitutions: true
 
-availableSecrets:
-  secretManager:
-    - versionName: projects/$PROJECT_ID/secrets/google-maps-api-key-prod/versions/latest
-      env: "VITE_GOOGLE_MAPS_API_KEY"
-    - versionName: projects/$PROJECT_ID/secrets/vite-api-url-prod/versions/latest
-      env: "VITE_API_BASE_URL"
-
 steps:
-  - name: "gcr.io/cloud-builders/docker"
-    id: "build-image"
-    secretEnv:
-      - "VITE_API_BASE_URL"
-      - "VITE_GOOGLE_MAPS_API_KEY"
+  - name: "gcr.io/cloud-builders/gcloud"
+    id: "get-secrets"
     entrypoint: "bash"
     args:
       - "-c"
       - |
+        set -e
+        echo "Fetching secrets..."
+        VITE_API_BASE_URL=$$(gcloud secrets versions access latest --secret=vite-api-url-prod --project=$PROJECT_ID)
+        VITE_GOOGLE_MAPS_API_KEY=$$(gcloud secrets versions access latest --secret=google-maps-api-key-prod --project=$PROJECT_ID)
+        echo "VITE_API_BASE_URL=$$VITE_API_BASE_URL" > /workspace/.env.build
+        echo "VITE_GOOGLE_MAPS_API_KEY=$$VITE_GOOGLE_MAPS_API_KEY" >> /workspace/.env.build
+        echo "Secrets retrieved successfully"
+        echo "API URL: $$VITE_API_BASE_URL"
+
+  - name: "gcr.io/cloud-builders/docker"
+    id: "build-image"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        set -e
+        source /workspace/.env.build
+        echo "Building with VITE_API_BASE_URL=$$VITE_API_BASE_URL"
         docker build \
           --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:$SHORT_SHA \
           --tag=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest \
@@ -38,6 +46,7 @@ steps:
           --build-arg=NODE_ENV=production \
           --cache-from=${_ARTIFACT_REGISTRY}/$PROJECT_ID/${_REPOSITORY}/${_IMAGE_NAME}:latest \
           .
+    waitFor: ["get-secrets"]
 
   - name: "gcr.io/cloud-builders/docker"
     id: "push-image"
