--- a/helm-chart-frontend/templates/nginx-configmap.yaml
+++ b/helm-chart-frontend/templates/nginx-configmap.yaml
@@ -63,7 +63,7 @@ data:
             add_header X-Content-Type-Options "nosniff" always;
             add_header X-XSS-Protection "1; mode=block" always;
             add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self'; connect-src 'self' {{ .Values.config.api.baseUrl | default "http://localhost:5001" }};" always;
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://maps.gstatic.com https://*.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://maps.googleapis.com https://maps.gstatic.com; font-src 'self' https://fonts.gstatic.com data:; img-src 'self' data: https: blob:; connect-src 'self' {{ .Values.config.api.baseUrl | default "http://localhost:5001" }} https://maps.googleapis.com https://*.googleapis.com; frame-src 'self'; base-uri 'self'; form-action 'self'; worker-src 'self' blob:;" always;
             
             # Handle client-side routing
             location / {
