--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,27 @@
-# Google Maps API Configuration
-VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+# API Configuration
+VITE_API_BASE_URL=https://api.mieszkaniownik.wsparcie.dev
 
-# Backend API Configuration
-VITE_API_BASE_URL=http://localhost:5001
+# Google Maps API Configuration
+VITE_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# Application Configuration
+VITE_APP_TITLE=Mieszkaniownik
+VITE_APP_DESCRIPTION=Your key to student housing
+VITE_ENABLE_DEBUG=false
+VITE_LOG_LEVEL=error
+
+# Feature Flags
+VITE_ENABLE_ANALYTICS=true
+VITE_ENABLE_NOTIFICATIONS=true
+VITE_ENABLE_DARK_MODE=true
+
+# Sentry
+# VITE_SENTRY_DSN=https://xxxxx@sentry.io/xxxxx
+# VITE_SENTRY_ENVIRONMENT=production
+
+# OAuth Configuration
+# VITE_GOOGLE_CLIENT_ID=your-google-client-id
+# VITE_DISCORD_CLIENT_ID=your-discord-client-id
+
+# Google Analytics
+# VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
